// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-AykKG bBNolr"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-AykKG hgvSPA"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-AykKG jsnxhr"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-AykKG hUVZOM"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-AykKF dZqsoD"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-AykKG hozJbw"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-AykKF dsUbBn"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AykKH cEtPxO"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-AykKG kCsYru"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-AykKF ffYiQF"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-AykKG bhanaW"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC cJwzAk sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-AykKF kuPifB"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC cJwzAk sc-AykKI hVujcK"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-AykKG jzTrHj"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-AykKG lkaVlL"
  disabled=""
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-AykKG eLkprO"
  size="1"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-AykKG dtPbOa"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AykKG tlOLT"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-AykKG fWRNjX"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-AykKG cJMyHX"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-AykKG jVvWST"
  disabled=""
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-AykKG bSwgUm"
  size="1"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-AykKG bTmDwu"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-AykKG cYACZT"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-AykKG jDfuOH"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-AykKG jzTrHj"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-AykKG lkaVlL"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-AykKG eLkprO"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-AykKG dtPbOa"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AykKG tlOLT"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-AykKG fWRNjX"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-AykKG cJMyHX"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-AykKG jVvWST"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-AykKG bSwgUm"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-AykKG bTmDwu"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-AykKG cYACZT"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-AykKG jDfuOH"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-AykKH gYGJrf"
  />
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-AykKG tlOLT"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-AykKG tlOLT"
  size="2"
  type="button"
>
  <p
    class="sc-AykKC jujpib sc-AykKI hVujcK"
  >
    News
  </p>
</button>
`;
